Fix alignment issues with the latest Twitter
Before this change, the "What happening"? section and the profile section were misaligned with the latest Twitter.

This change has been tested on Firefox 59.0.2.

--- a/a-better-twitter.css
+++ b/a-better-twitter.css
@@ -82,7 +82,7 @@ div.RelatedUsers.module
   .content-main
   {
     width: 100% !important;
-    margin: 0;
+    margin: 0 !important;
   }
 /*Largura do perfil*/
   .dashboard-left
